# NYC-Real-Estate-GPT

./: README.md  docker-compose.yml
ollama/: Dockerfile
streamlit_app/: Dockerfile  app.py  config.py  data_ingestor.py  data_preprocessor.py  pyproject.toml
streamlit_app/llms/: clients.py
